--- a/index.html
+++ b/index.html
@@ -27,12 +27,11 @@
             <div class="media-item">
                 <img src="./images/pic.jpg" alt="Food" width=" 1500" height="1000">
             </div>
-            <div class=" media-item">
-                <video controls>
-                    <source src="/images/vid.mp4" type="video/mp4">
-                    Your browser does not support the video tag.
-                </video>
-            </div>
+        <div class="media-item">
+            <iframe width="1500" height="1000" src="https://www.youtube.com/watch?v=_dui6BUmMBg" frameborder="0"
+                allowfullscreen></iframe>
+        </div>
+
         </section>
         <footer>
             <p>&copy; 2024 Khadim's Resturant. All rights reserved.</p>
