--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
             <div class="media-item">
                 <img src="./images/pic.jpg" alt="Food" width=" 1500" height="1000">
             </div>
-        <div class="media-item">
-            <iframe width="1500" height="1000" src="https://www.youtube.com/watch?v=_dui6BUmMBg" frameborder="0"
-                allowfullscreen></iframe>
-        </div>
+            <div class="media-item">
+                <iframe width="1500" height="1000" src="https://www.youtube.com/embed/_dui6BUmMBg" frameborder="0"
+                    allowfullscreen></iframe>
+            </div>
 
         </section>
         <footer>
